@@ -134,7 +134,7 @@ CONSTS = {
 
 METRES_PER_KM = 1000.
 
-# Alaska 2023 NSHM bias adjustment coefficients
+# Alaska 2023 USGS model bias adjustment coefficients
 AK_BIAS = os.path.join(os.path.dirname(__file__),
                        "ngasub_interface_alaska_bias_adj",
                        "nga_sub_ak_interface_adjustment.csv")
@@ -613,7 +613,7 @@ class AbrahamsonGulerce2020SInter(GMPE):
                                   sigma mu (the standard deviation of the
                                   median) for the epistemic uncertainty model
         ak23_bias_adj: Period-dependent bias adjustment as applied within
-                       the USGS 2023 NSHM for Alaska
+                       the USGS 2023 model for Alaska
     """
     #: Supported tectonic region type is subduction interface
     DEFINED_FOR_TECTONIC_REGION_TYPE = const.TRT.SUBDUCTION_INTERFACE
@@ -670,13 +670,13 @@ class AbrahamsonGulerce2020SInter(GMPE):
             raise ValueError('USGS basin scaling is only applicable to the '
                              'Cascadia region for AbrahamsonGulerce2020.')
 
-        # Alaska 2023 NSHM bias adjustment
+        # Alaska 2023 USGS model bias adjustment
         self.ak23_bias_adj = ak23_bias_adj
         if self.ak23_bias_adj:
             if (self.DEFINED_FOR_TECTONIC_REGION_TYPE is
                 not const.TRT.SUBDUCTION_INTERFACE or
                     self.region != "GLO"):
-                raise ValueError(f'The Alaska 2023 NSHM bias adjustment '
+                raise ValueError(f'The Alaska 2023 USGS model bias adjustment '
                                  f'should only be applied to the "global"'
                                  f'interface variant of variant of '
                                  f'{self.__class__.__name__}.')
