@@ -1,3 +1,7 @@
+  [Christopher Brooks]
+  * Added the Alaska bias adjustments for the NGASUB GMMs
+    as required for the USGS 2023 Alaska model.
+
   [Michele Simionato]
   * Show the GSIM class warnings only once
   * Extended `oq engine --lhc` and `oq engine --lrc` to show the
